--- a/IO2017/application.properties
+++ b/IO2017/application.properties
@@ -1,6 +1,6 @@
 # Replace with your connection string
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/io2017
+spring.datasource.url=jdbc:mysql://localhost:3306/io2017?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
