--- a/IO2017/pom.xml
+++ b/IO2017/pom.xml
@@ -53,6 +53,10 @@
 	    	<groupId>org.thymeleaf.extras</groupId>
 	    	<artifactId>thymeleaf-extras-springsecurity4</artifactId>
 		</dependency>
+		<dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
